# rozwiazania

./: .travis.yml  plik.txt
lab1/doublebasepalindromes/: DoubleBasePalindromes.cpp  DoubleBasePalindromes.h  main.cpp
lab1/factorial/: Factorial.cpp  main.cpp
lab1/multiplicationtable/: MultiplicationTable.cpp  MultiplicationTable.h  main.cpp
lab1/palindrome/: Palindrome.cpp  Palindrome.h  main.cpp
lab1/reversestring/: ReverseString.cpp  ReverseString.h  main.cpp
lab10/academiascheduler/: Scheduler.cpp  Scheduler.h
lab10/algotest/: Algo.cpp  Algo.h  main.cpp
lab11/factorymethod/: FactoryMethod.h  main.cpp
lab12/academiasequentialgenerator/: SequentialGenerator.cpp  SequentialGenerator.h
lab12/academiateacherhash/: TeacherHash.cpp  TeacherHash.h
lab12/timerecorder/: TimeRecorder.cpp  TimeRecorder.h
lab12/tree/: Tree.cpp  Tree.h  main.cpp
lab12/treeiterators/: CMakeLists.txt  Tree.h  TreeIterators.cpp  TreeIterators.h
lab2/array2d/: Array2D.cpp  Array2D.h  CMakeLists.txt  main.cpp
lab2/greatestproduct/: GreatestProduct.cpp  GreatestProduct.h  main.cpp
lab2/polybius/: Polybius.cpp  Polybius.h  main.cpp
lab2/simpleforwardlist/: SimpleForwardList.cpp  SimpleForwardList.h  main.cpp
lab2/xorcypherbreaker/: XorCypherBreaker.cpp  XorCypherBreaker.h  main.cpp
lab3/tinyurl/: TinyUrl.h  (+2 more)
lab6/: CMakeLists.txt
lab7/: CMakeLists.txt
lab9/: CMakeLists.txt
lab9/juwenalia/: CMakeLists.txt  Juwenalia.cpp  Juwenalia.h  Plecak.h  PosortujProdukty.cpp  PosortujProdukty.h  Prowiant.h  Student.cpp  Student.h  WypelnijPlecak.cpp  WypelnijPlecak.h  main.cpp
(+49 files in other folders)
